--- a/.travis.yml
+++ b/.travis.yml
@@ -17,20 +17,20 @@ script:
   - docker --version # print the version for logging
   # - docker build -t simple-node .
   # - docker tag simple-node YOUR_DOCKER_HUB/simple-node:latest
-  - docker-compose -f ./project/docker-compose-build.yaml build --parallel
+  - docker-compose -f ./deployment/docker/docker-compose-build.yaml build --parallel
   #  tagging
   # TODO: append automatically. could use a bash script to pull the image, get the tag, increment it
-  - docker tag reverseproxy taofeekat28/reverseproxy:v1
-  - docker tag udagram-api-user taofeekat28/udagram-api-user:v1
-  - docker tag udagram-api-feed taofeekat28/udagram-api-feed:v1
-  - docker tag udagram-frontend:local taofeekat28/udagram-frontend:v1
+  - docker tag reverseproxy taofeekat28/reverseproxy:latest
+  - docker tag udagram-api-user taofeekat28/udagram-api-user:latest
+  - docker tag udagram-api-feed taofeekat28/udagram-api-feed:latest
+  - docker tag udagram-frontend:local taofeekat28/udagram-frontend:latest
 
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   # - docker push YOUR_DOCKER_HUB/simple-node
-  - docker push taofeekat28/reverseproxy:v1
-  - docker push taofeekat28/udagram-api-user:v1
-  - docker push taofeekat28/udagram-api-feed:v1
-  - docker push taofeekat28/udagram-frontend:v1
+  - docker push taofeekat28/reverseproxy:latest
+  - docker push taofeekat28/udagram-api-user:latest
+  - docker push taofeekat28/udagram-api-feed:latest
+  - docker push taofeekat28/udagram-frontend:latest
